2009-12-23  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        HTMLInputElement::valueAsDate getter support.
        https://bugs.webkit.org/show_bug.cgi?id=32876

        Expose dateToDaysFrom1970().

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * wtf/DateMath.cpp:
        (WTF::dateToDaysFrom1970):
        * wtf/DateMath.h:

2009-12-22  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        Turn off datagrid by default, at least for all platforms Apple ships.
        The datagrid implementation isn't ready for general web use yet.

        * Configurations/FeatureDefines.xcconfig: Turn off datagrid by default.

2009-12-22  Steve Block  <steveblock@google.com>

        Reviewed by David Levin.

        Updates Android's scheduleDispatchFunctionsOnMainThread() to use new
        AndroidThreading class, rather than using JavaSharedClient directly.
        This fixes the current layering violation.
        https://bugs.webkit.org/show_bug.cgi?id=32651

        The pattern is copied from Chromium, which uses the ChromiumThreading
        class. This patch also fixes the style in ChromiumThreading.h.

        * wtf/android/AndroidThreading.h: Added. Declares AndroidThreading.
        * wtf/android/MainThreadAndroid.cpp: Modified
        (WTF::scheduleDispatchFunctionsOnMainThread): Uses AndroidThreading.
        * wtf/chromium/ChromiumThreading.h: Modified. Fixes style.

2009-12-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Fix a couple of problems with UntypedPtrAndBitfield.

        Add a m_leaksPtr to reduce false positives from leaks in debug builds
        (this isn't perfect because we'd like a solution for release builds,
        but this is now at least as good as a PtrAndFlags would be).

        Switch SmallStringsto use a regular string for the base, rather than